# basic-shop

./: .gitignore  Caddyfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/basic_shop/: manage.py
backend/src/basic_shop/apps/shop/: models.py  serializers.py  urls.py  views.py
backend/src/basic_shop/apps/shop/migrations/: 0001_initial.py
backend/src/basic_shop/basic_shop/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .prettierignore  Caddyfile.prod  Dockerfile  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: global.css  main.ts  product.ts
